Fix: overflow on firefox

--- a/public/canvasBox/canvas.css
+++ b/public/canvasBox/canvas.css
@@ -4,6 +4,7 @@ body {
   height: 100%;
   margin: 0px;
   font-family: sans-serif;
+  overflow: hidden;
 }
 
 html,
